rm promscale reference

--- a/metricexport.mdx
+++ b/metricexport.mdx
@@ -25,7 +25,7 @@ systems you maintain.
 Chalk tracks various time series metrics that measure the latency and throughput of resolvers and
 streaming pipelines.
 
-Chalk uses TimescaleDB and [Promscale](https://github.com/timescale/promscale) to store these metrics. You can use any
+Chalk uses TimescaleDB to store these metrics. You can use any
 OpenMetrics-compatible collector to collect metrics about the execution of your feature pipelines
 from Chalk. Examples include:
 
