--- a/has-one.mdx
+++ b/has-one.mdx
@@ -61,7 +61,7 @@ class User:
 ```
 
 <TipInfo>
-  The `lambda` solves forward references, letting you reference `User` before it is defined.
+  The <code>lambda</code> solves forward references, letting you reference <code>User</code> before it is defined.
 </TipInfo>
 
 ---
