--- a/sagemaker-tutorial.mdx
+++ b/sagemaker-tutorial.mdx
@@ -1,12 +1,14 @@
 ---
 title: "Tutorial: AWS SageMaker with Chalk"
 description: Build a Chalk feature pipeline for training and serving models with AWS SageMaker.
-published: false
+published: true
 ---
 
 import { TipInfo } from '@/components/Tip'
 
 ---
+
+## Introduction
 
 Chalk enables you to build feature pipelines for machine learning models. [AWS
 SageMaker](https://aws.amazon.com/sagemaker/) is a popular service for building, training, and deploying models. Chalk
