--- a/sagemaker-tutorial.mdx
+++ b/sagemaker-tutorial.mdx
@@ -58,7 +58,7 @@ For this tutorial, we'll pull transaction data from AWS DynamoDB, but you can ad
 To connect DynamoDB, enter your AWS access key into the Chalk dashboard. After adding AWS, define your DynamoDB data
 source in Python and give it a name:
 
-```python
+```python src/datasources.py
 from chalk.sql import DynamoDBSource
 
 DynamoDBSource(name="our_dynamo")
@@ -114,7 +114,7 @@ Most of our features will be loaded from DynamoDB using [SQL file resolvers](/do
 `Transaction` and `Customer` data:
 
 ```sql src/resolvers/transactions.chalk.sql
--- type: offline
+-- type: online
 -- resolves: transaction
 -- source: our_dynamo
 SELECT
@@ -128,7 +128,7 @@ FROM
 ```
 
 ```sql src/resolvers/customers.chalk.sql
--- type: offline
+-- type: online
 -- resolves: customer
 -- source: our_dynamo
 SELECT
@@ -147,7 +147,7 @@ Each column in the result must match the name of a feature. Use `AS` to rename c
 For features requiring computation, we use Python resolvers. Here's a resolver
 for retrieving a customer's FICO score from an API:
 
-```python
+```python src/models.py
 from chalk import online
 
 @online
