--- a/benchmarks.mdx
+++ b/benchmarks.mdx
@@ -50,7 +50,7 @@ All machines are co-located in the same GCP region, and queries were submitted f
 All benchmarks were executed as queries against a set of 25 resolvers resolving 100 features. Feature data was
 generated randomly.
 
-Queries sampled features randomly from the "pre-computed" feature set, which consists of data stored in the online store,
+Queries sampled features randomly from the "pre-computed" feature class, which consists of data stored in the online store,
 and from the "on-the-fly" set, which consists of features that are never stored and instead always computed in response to queries.
 
 The online store was pre-warmed to simulate a use-case where features are pre-ingested via
