--- a/dataframe.mdx
+++ b/dataframe.mdx
@@ -59,7 +59,7 @@ In the above example, we use all forms of referencing a feature's name.
 
 ### From a list
 
-You can create the same [`chalk.DataFrame`](/api-docs#DataFrame.__init__) by passing a list of feature sets:
+You can create the same [`chalk.DataFrame`](/api-docs#DataFrame.__init__) by passing a list of feature classes:
 
 ```python
 chalk_df = DataFrame([
