--- a/fraud-tutorial.mdx
+++ b/fraud-tutorial.mdx
@@ -221,7 +221,7 @@ transaction is linked to a single account. We'll define the
 +    id: int
 +
 +    # The id of the account that this transaction belongs to, set to a join.
-+    # We refer to features and feature sets defined further down in the file
++    # We refer to features and feature classes defined further down in the file
 +    # using quotation marks, so Chalk will recognize that it is a valid
 +    # feature reference to be processed later.
 +    account_id: "Account.id"
