--- a/has-many.mdx
+++ b/has-many.mdx
@@ -1,6 +1,6 @@
 ---
 title: Has Many
-description: Define one-to-many and many-to-many relationships between feature sets.
+description: Define one-to-many and many-to-many relationships between feature classes.
 ---
 
 import { PyDiffEditor } from '@/components/Editor'
