--- a/has-one.mdx
+++ b/has-one.mdx
@@ -1,6 +1,6 @@
 ---
 title: Has One
-description: Define one-to-one relationships between feature sets.
+description: Define one-to-one relationships between feature classes.
 ---
 
 import { PyDiffEditor } from '@/components/Editor'
