--- a/query-online.mdx
+++ b/query-online.mdx
@@ -26,7 +26,7 @@ Chalk responds to online queries by getting and executing a query plan.
 
 A query plan is a sequence of tasks, some of which can be executed in parallel,
 that will produce a target output. Although a simplification, your resolvers
-are a subset of these tasks. Consider the following feature set and resolvers:
+are a subset of these tasks. Consider the following feature class and resolvers:
 
 ```python
 from chalk.features import features
