--- a/resolver-outputs.mdx
+++ b/resolver-outputs.mdx
@@ -65,7 +65,7 @@ to the constructor for the feature class.
 The [editor plugin](/docs/editor-setup) will check
 that the type annotation you assign to the resolver
 matches subset of features passed to the constructor
-of the feature set.
+of the feature class.
 
 ### All features
 
@@ -119,7 +119,7 @@ which leaves only the `employer` feature.
 
 ## DataFrame output
 
-You can also output many instances of a feature set from a resolver
+You can also output many instances of a feature class from a resolver
 by specifying a [DataFrame](/docs/dataframe) as the return type of
 the function:
 
