--- a/time.mdx
+++ b/time.mdx
@@ -9,7 +9,7 @@ By default, features are timestamped with the execution time of their resolver. 
 providing timestamps from your data source. This functionality can be helpful when working with an event store or
 timestamped API.
 
-The first step is to add a `FeatureTime` attribute to your feature set.
+The first step is to add a `FeatureTime` attribute to your feature class.
 
 By default, if you have a feature named `ts` with a type
 of `datetime.datetime`, it will be treated as a feature time.
