--- a/vector-search.mdx
+++ b/vector-search.mdx
@@ -8,7 +8,7 @@ import { TipInfo, TipBad, TipGood } from '@/components/Tip'
 
 ---
 
-A feature set can be linked to the closest examples of another feature set. This functionality can be useful for search
+A feature class can be linked to the closest examples of another feature class. This functionality can be useful for search
 and retrieval applications.
 
 Nearest neighbor relationships are only supported for [vector features](/docs/feature-types#vectors).
@@ -20,8 +20,8 @@ Nearest neighbor relationships are only supported for [vector features](/docs/fe
 
 
 To illustrate how to use nearest neighbor relationships, we'll walk through an example for Chalk can power FAQ search.
-In this example, the feature set `SearchQuery` feature set represents an incoming request, and the `FAQDocument`
-feature set represents our collection of frequently asked questions and answers. Our goal is to return the five most
+In this example, the `SearchQuery` feature class represents an incoming request, and the `FAQDocument`
+feature class represents our collection of frequently asked questions and answers. Our goal is to return the five most
 relevant FAQ entries for the given search query.
 
 ---
