--- a/window-functions.mdx
+++ b/window-functions.mdx
@@ -12,7 +12,7 @@ averages or counts of events in a window.
 
 Window functions are computed on a [DataFrame](/docs/dataframe).
 A [has-many](/docs/has-many) feature creates a [DataFrame](/docs/dataframe)
-on a feature set, which you can filter with the special functions
+on a feature class, which you can filter with the special functions
 `before` and `after`.
 These functions filter your data relative to the
 current time in context. This time could be in the past
