update temporal consistency code (#181)
* update temporal consistency code

* oops

--- a/temporal-consistency.mdx
+++ b/temporal-consistency.mdx
@@ -76,11 +76,12 @@ t2 = datetime.now() - timedelta(days=30)
 
 dataset = ChalkClient().offline_query(
      input={
-         # Sample a single business with id=123,
+         # Sample business 123 twice because we have two input_times
          Business.id: [123, 123],
-         # Sample the same business at two times: t1 and t2
-         Business.ts: [t1, t2],
      },
+     # Each element of `input_times` corresponds to the element
+     # with the same index in `input`
+     input_times=[t1, t2],
      # Sample all features of business.
      # Alternatively, sample only the features you need:
      #   output=[Business.sales, Business.cogs]
