add more input_times references to docs

--- a/changelog.mdx
+++ b/changelog.mdx
@@ -964,8 +964,8 @@ at = datetime.now()
 dataset: Dataset = ChalkClient().offline_query(
      input={
          User.id: uids,
-         User.ts: [at] * len(uids),
      },
+     input_times=[at] * len(uids),
      output=[
          User.id,
          User.fullname,
