fix typo in scheduled resolvers

--- a/scheduled-query.mdx
+++ b/scheduled-query.mdx
@@ -59,7 +59,7 @@ ScheduledQuery(
     output=[Transaction.clean_name, Transaction.category],
     online=True,
     offline=True,
-    incremental_resolver="transactions",
+    incremental_resolvers="transactions",
 )
 ```
 
